--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-next": "^0.16.1",
     "components": "link:@/components",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -31,6 +34,7 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
