--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "bootstrap-vue-next": "^0.16.1",
     "components": "link:@/components",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -29,10 +27,13 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
